--- a/index.html
+++ b/index.html
@@ -102,23 +102,31 @@
                     <ul class="list list-team">
                         <li class="item-team">
                             <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260">
-                            <h3 class="item-title member-name">Mark Guerrero</h3>
-                            <p class="item-text member-role">Product Designer</p>
+                            <div class="member-description">
+                                <h3 class="item-title member-name">Mark Guerrero</h3>
+                                <p class="item-text member-role">Product Designer</p>
+                            </div>
                         </li>
                         <li class="item-team">
                             <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260">
-                            <h3 class="item-title member-name">Tom Ford</h3>
-                            <p class="item-text member-role">Frontend Developer</p>
+                            <div class="member-description">
+                                <h3 class="item-title member-name">Tom Ford</h3>
+                                <p class="item-text member-role">Frontend Developer</p>
+                            </div>
                         </li>
                         <li class="item-team">
                             <img src="./images/camilla.jpg" alt="Camila Garcia" width="264" height="260">
-                            <h3 class="item-title member-name">Camila Garcia</h3>
-                            <p class="item-text member-role">Marketing</p>
+                            <div class="member-description">
+                                <h3 class="item-title member-name">Camila Garcia</h3>
+                                <p class="item-text member-role">Marketing</p>
+                            </div>
                         </li>
                         <li class="item-team">
                             <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260">
-                            <h3 class="item-title member-name">Daniel Wilson</h3>
-                            <p class="item-text member-role">UI Designer</p>
+                            <div class="member-description">
+                                <h3 class="item-title member-name">Daniel Wilson</h3>
+                                <p class="item-text member-role">UI Designer</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
